force-app/main/default/objects/Cobertura_Especial__c/Cobertura_Especial__c.object-meta.xml
<CustomObject>
    <label>Cobertura Especial</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Nombre de Cobertura Especial</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Coberturas Especiales</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>