force-app/main/default/objects/Cobertura_Especial__c/fields/Accion_Grupo_Terapeutico__c.field-meta.xml
<CustomField>
    <fullName>Accion_Grupo_Terapeutico__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Acción/Grupo Terapéutico</label>
    <referenceTo>Grupo_Terapeutico__c</referenceTo>
    <relationshipLabel>Coberturas Especiales</relationshipLabel>
    <relationshipName>Coberturas_Especiales</relationshipName>
    <type>Lookup</type>
</CustomField>