force-app/main/default/objects/Cobertura_Especial__c/fields/Codigo_medicamento__c.field-meta.xml
<CustomField>
    <fullName>Codigo_medicamento__c</fullName>
    <formula>Medicamento__r.Codigo_medicamento__c</formula>
    <label>Código medicamento</label>
    <type>Text</type>
</CustomField>