force-app/main/default/objects/Cobertura_Especial__c/fields/Consultorio__c.field-meta.xml
<CustomField>
    <fullName>Consultorio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consultorio</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Consultorio__c.Efector_Prestador__c</field>
            <operation>equals</operation>
            <valueField>$Source.Prestador__c</valueField>
        </filterItems>
        <filterItems>
            <field>Consultorio__c.Estado__c</field>
            <operation>equals</operation>
            <value>A</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Consultorio__c</referenceTo>
    <relationshipLabel>Coberturas Especiales</relationshipLabel>
    <relationshipName>Coberturas_Especiales</relationshipName>
    <type>Lookup</type>
</CustomField>