force-app/main/default/objects/Cobertura_Especial__c/fields/Dependencia__c.field-meta.xml
<CustomField>
    <fullName>Dependencia__c</fullName>
    <label>Dependencia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>V</fullName>
                <label>Verdadero</label>
            </value>
            <value>
                <fullName>F</fullName>
                <label>Falso</label>
            </value>
            <value>
                <fullName>Incluye</fullName>
                <isActive>false</isActive>
                <label>Incluye</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>