force-app/main/default/objects/Cobertura_Especial__c/fields/Descripcion_Accion_Grupo_Terapeutico__c.field-meta.xml
<CustomField>
    <fullName>Descripcion_Accion_Grupo_Terapeutico__c</fullName>
    <formula>Accion_Grupo_Terapeutico__r.Descripcion_Accion_Grupo_Terapeutico__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Descripción Acción/ Grupo Terapéutico</label>
    <type>Text</type>
</CustomField>