force-app/main/default/objects/Cobertura_Especial__c/fields/Descripcion_de_Forma__c.field-meta.xml
<CustomField>
    <fullName>Descripcion_de_Forma__c</fullName>
    <formula>Forma__r.Descripcion_de_Forma__c</formula>
    <label>Descripción de Forma</label>
    <type>Text</type>
</CustomField>