force-app/main/default/objects/Cobertura_Especial__c/fields/Descripcion_del_Grupo__c.field-meta.xml
<CustomField>
    <fullName>Descripcion_del_Grupo__c</fullName>
    <formula>Grupo_de_Prestaciones__r.Descripcion_grupo__c</formula>
    <label>Descripción del Grupo</label>
    <type>Text</type>
</CustomField>