force-app/main/default/objects/Cobertura_Especial__c/fields/Descripcion_Diagn_stico__c.field-meta.xml
<CustomField>
    <fullName>Descripcion_Diagn_stico__c</fullName>
    <formula>Diagnostico__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Descripción Diagnóstico</label>
    <type>Text</type>
</CustomField>