force-app/main/default/objects/Cobertura_Especial__c/fields/Descripcion_Grupo_Terapeutico__c.field-meta.xml
<CustomField>
    <fullName>Descripcion_Grupo_Terapeutico__c</fullName>
    <formula>Grupo_Terapeutico__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Descripcion Grupo Terapeutico</label>
    <type>Text</type>
</CustomField>