force-app/main/default/objects/Cobertura_Especial__c/fields/Descripcion_monodroga__c.field-meta.xml
<CustomField>
    <fullName>Descripcion_monodroga__c</fullName>
    <formula>Monodroga__r.Descripcion_monodroga__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Descripción monodroga</label>
    <type>Text</type>
</CustomField>