force-app/main/default/objects/Cobertura_Especial__c/fields/Descripcion_nomenclador_presatcion__c.field-meta.xml
<CustomField>
    <fullName>Descripcion_nomenclador_presatcion__c</fullName>
    <formula>Nomenclador_Prestacion__r.Descripcion_tipo_nomenclador__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Descripción Nomenclador Prestacion</label>
    <type>Text</type>
</CustomField>