force-app/main/default/objects/Cobertura_Especial__c/fields/Diagnostico__c.field-meta.xml
<CustomField>
    <fullName>Diagnostico__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Diagnóstico</label>
    <referenceTo>Diagnostico__c</referenceTo>
    <relationshipLabel>Coberturas Especiales</relationshipLabel>
    <relationshipName>Coberturas_Especiales</relationshipName>
    <type>Lookup</type>
</CustomField>