force-app/main/default/objects/Cobertura_Especial__c/fields/Efector__c.field-meta.xml
<CustomField>
    <fullName>Efector__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Efector</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Efector</value>
        </filterItems>
        <filterItems>
            <field>Account.Es_Profesional__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Account.Estado__c</field>
            <operation>equals</operation>
            <value>Activo</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Coberturas Especiales</relationshipLabel>
    <relationshipName>Coberturas_Especiales</relationshipName>
    <type>Lookup</type>
</CustomField>