force-app/main/default/objects/Cobertura_Especial__c/fields/Error_en_SS__c.field-meta.xml
<CustomField>
    <fullName>Error_en_SS__c</fullName>
    <label>Error en SS</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>