force-app/main/default/objects/Cobertura_Especial__c/fields/Evento_Medico_de_Seguimiento__c.field-meta.xml
<CustomField>
    <fullName>Evento_Medico_de_Seguimiento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Evento Médico de Seguimiento</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Evento_medico__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Evento médico de seguimiento</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Evento_medico__c</referenceTo>
    <relationshipLabel>Coberturas Especiales</relationshipLabel>
    <relationshipName>Coberturas_Especiales</relationshipName>
    <type>Lookup</type>
</CustomField>