force-app/main/default/objects/Cobertura_Especial__c/fields/Fecha_de_error_en_SS__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_error_en_SS__c</fullName>
    <label>Fecha de error en SS</label>
    <type>DateTime</type>
</CustomField>