force-app/main/default/objects/Cobertura_Especial__c/fields/Forma__c.field-meta.xml
<CustomField>
    <fullName>Forma__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Forma</label>
    <referenceTo>Forma__c</referenceTo>
    <relationshipLabel>Coberturas Especiales</relationshipLabel>
    <relationshipName>Coberturas_Especiales</relationshipName>
    <type>Lookup</type>
</CustomField>