force-app/main/default/objects/Cobertura_Especial__c/fields/Grupo_de_Prestaciones__c.field-meta.xml
<CustomField>
    <fullName>Grupo_de_Prestaciones__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grupo de Prestaciones</label>
    <referenceTo>Grupo_de_Prestaciones__c</referenceTo>
    <relationshipLabel>Coberturas Especiales</relationshipLabel>
    <relationshipName>Coberturas_Especiales</relationshipName>
    <type>Lookup</type>
</CustomField>