force-app/main/default/objects/Cobertura_Especial__c/fields/Incluye_Excluye__c.field-meta.xml
<CustomField>
    <fullName>Incluye_Excluye__c</fullName>
    <label>Incluye/ Excluye</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I</fullName>
                <label>Incluye</label>
            </value>
            <value>
                <fullName>E</fullName>
                <label>Excluye</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>