force-app/main/default/objects/Cobertura_Especial__c/fields/Integracion__c.field-meta.xml
<CustomField>
    <fullName>Integracion__c</fullName>
    <label>Integración</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>V</fullName>
                <label>Verdadero</label>
            </value>
            <value>
                <fullName>F</fullName>
                <label>Falso</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>