force-app/main/default/objects/Cobertura_Especial__c/fields/Marca_Domingo__c.field-meta.xml
<CustomField>
    <fullName>Marca_Domingo__c</fullName>
    <label>Marca Domingo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>V</fullName>
                <label>Verdadero</label>
            </value>
            <value>
                <fullName>F</fullName>
                <label>Falso</label>
            </value>
            <value>
                <fullName>true</fullName>
                <isActive>false</isActive>
                <label>true</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>