force-app/main/default/objects/Cobertura_Especial__c/fields/Medicamento__c.field-meta.xml
<CustomField>
    <fullName>Medicamento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Medicamento</label>
    <referenceTo>Medicamento__c</referenceTo>
    <relationshipLabel>Coberturas Especiales</relationshipLabel>
    <relationshipName>Coberturas_Especiales</relationshipName>
    <type>Lookup</type>
</CustomField>