force-app/main/default/objects/Cobertura_Especial__c/fields/Monodroga__c.field-meta.xml
<CustomField>
    <fullName>Monodroga__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Monodroga</label>
    <referenceTo>Monodroga__c</referenceTo>
    <relationshipLabel>Coberturas Especiales</relationshipLabel>
    <relationshipName>Coberturas_Especiales</relationshipName>
    <type>Lookup</type>
</CustomField>