force-app/main/default/objects/Cobertura_Especial__c/fields/Nombre_de_Consultorio__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_Consultorio__c</fullName>
    <formula>Consultorio__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre de Consultorio</label>
    <type>Text</type>
</CustomField>