force-app/main/default/objects/Cobertura_Especial__c/fields/Nombre_de_Efector__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_Efector__c</fullName>
    <formula>Efector__r.Name</formula>
    <label>Nombre de Efector</label>
    <type>Text</type>
</CustomField>