force-app/main/default/objects/Cobertura_Especial__c/fields/Nombre_del_Prestador__c.field-meta.xml
<CustomField>
    <fullName>Nombre_del_Prestador__c</fullName>
    <formula>Prestador__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre del Prestador</label>
    <type>Text</type>
</CustomField>