force-app/main/default/objects/Cobertura_Especial__c/fields/Nombre_medicamento__c.field-meta.xml
<CustomField>
    <fullName>Nombre_medicamento__c</fullName>
    <formula>Medicamento__r.Nombre_de_Producto__c</formula>
    <label>Nombre medicamento</label>
    <type>Text</type>
</CustomField>