force-app/main/default/objects/Cobertura_Especial__c/fields/Nombre_Prescriptor__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Prescriptor__c</fullName>
    <formula>IF(
   NOT(ISBLANK( Prescriptor__c)),  Prescriptor__r.Name ,null )</formula>
    <label>Nombre Prescriptor</label>
    <type>Text</type>
</CustomField>