force-app/main/default/objects/Cobertura_Especial__c/fields/Nombre_prestacion__c.field-meta.xml
<CustomField>
    <fullName>Nombre_prestacion__c</fullName>
    <formula>Nomenclador_Prestacion__r.Nombre_prestacion__c</formula>
    <label>Nombre prestación</label>
    <type>Text</type>
</CustomField>