force-app/main/default/objects/Cobertura_Especial__c/fields/Nomenclador__c.field-meta.xml
<CustomField>
    <fullName>Nomenclador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nomenclador</label>
    <referenceTo>Nomenclador_de_Prestacion__c</referenceTo>
    <relationshipLabel>Coberturas Especiales</relationshipLabel>
    <relationshipName>Coberturas_Especiales</relationshipName>
    <type>Lookup</type>
</CustomField>