force-app/main/default/objects/Cobertura_Especial__c/fields/Nomenclador_Prestacion__c.field-meta.xml
<CustomField>
    <fullName>Nomenclador_Prestacion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nomenclador Prestación</label>
    <referenceTo>Nomenclador_de_Prestacion__c</referenceTo>
    <relationshipLabel>Coberturas Especiales (Nomenclador de Prestación)</relationshipLabel>
    <relationshipName>Coberturas_Especiales1</relationshipName>
    <type>Lookup</type>
</CustomField>