force-app/main/default/objects/Cobertura_Especial__c/fields/Por_comprimido__c.field-meta.xml
<CustomField>
    <fullName>Por_comprimido__c</fullName>
    <label>Por comprimido</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Verdadero</fullName>
            </value>
            <value>
                <fullName>Falso</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>