force-app/main/default/objects/Cobertura_Especial__c/fields/Potencia__c.field-meta.xml
<CustomField>
    <fullName>Potencia__c</fullName>
    <label>Potencia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>