force-app/main/default/objects/Cobertura_Especial__c/fields/Presentacion_Medicamento__c.field-meta.xml
<CustomField>
    <fullName>Presentacion_Medicamento__c</fullName>
    <formula>Medicamento__r.Nombre_de_Presentacion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Presentación Medicamento</label>
    <type>Text</type>
</CustomField>