force-app/main/default/objects/Cobertura_Especial__c/fields/Prestador__c.field-meta.xml
<CustomField>
    <fullName>Prestador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prestador</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Efector</value>
        </filterItems>
        <filterItems>
            <field>Account.Es_Prestador__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Coberturas Especiales (Prestador)</relationshipLabel>
    <relationshipName>Coberturas_Especiales2</relationshipName>
    <type>Lookup</type>
</CustomField>