force-app/main/default/objects/Cobertura_Especial__c/fields/Prioridad__c.field-meta.xml
<CustomField>
    <fullName>Prioridad__c</fullName>
    <label>Prioridad</label>
    <length>255</length>
    <type>Text</type>
</CustomField>