force-app/main/default/objects/Cobertura_Especial__c/fields/Producto__c.field-meta.xml
<CustomField>
    <fullName>Producto__c</fullName>
    <formula>Medicamento__r.Descripcion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Producto</label>
    <type>Text</type>
</CustomField>