force-app/main/default/objects/Cobertura_Especial__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Grupo Terapeutico</fullName>
            </value>
            <value>
                <fullName>Medicamento</fullName>
            </value>
            <value>
                <fullName>Grupo Prestaciones</fullName>
            </value>
            <value>
                <fullName>Monodroga</fullName>
            </value>
            <value>
                <fullName>Nomenclador</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>