force-app/main/default/objects/Cobertura_Especial__c/fields/Tipo_de_Copago__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Copago__c</fullName>
    <label>Tipo de Copago</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>F</fullName>
                <label>Importe Fijo</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>310</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>Cob. Plan</label>
            </value>
            <value>
                <fullName>D</fullName>
                <label>Farm. Diab</label>
            </value>
            <value>
                <fullName>P</fullName>
                <label>Porcentaje</label>
            </value>
            <value>
                <fullName>310</fullName>
                <isActive>false</isActive>
                <label>310</label>
            </value>
            <value>
                <fullName>Cob. Plan</fullName>
                <isActive>false</isActive>
                <label>Cob. Plan</label>
            </value>
            <value>
                <fullName>Farm. Diab</fullName>
                <isActive>false</isActive>
                <label>Farm. Diab</label>
            </value>
            <value>
                <fullName>Importe Fijo</fullName>
                <isActive>false</isActive>
                <label>Importe Fijo</label>
            </value>
            <value>
                <fullName>Porcentaje</fullName>
                <isActive>false</isActive>
                <label>Porcentaje</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>