force-app/main/default/objects/Cobertura_Especial__c/fields/Tope_Anual__c.field-meta.xml
<CustomField>
    <fullName>Tope_Anual__c</fullName>
    <label>Tope Anual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>