force-app/main/default/objects/Cobertura_Especial__c/fields/Tope_Mensual__c.field-meta.xml
<CustomField>
    <fullName>Tope_Mensual__c</fullName>
    <label>Tope Mensual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>