force-app/main/default/objects/Cobertura_Especial__c/fields/Tope_Semanal__c.field-meta.xml
<CustomField>
    <fullName>Tope_Semanal__c</fullName>
    <label>Tope Semanal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>