force-app/main/default/objects/Cobertura_Especial__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Tipo_de_Copago__c</columns>
    <columns>Fecha_desde__c</columns>
    <columns>Fecha_hasta__c</columns>
    <columns>Dependencia__c</columns>
    <columns>Integracion__c</columns>
    <columns>Monodroga__c</columns>
    <columns>Nomenclador_Prestacion__c</columns>
    <columns>Descripcion_nomenclador_presatcion__c</columns>
    <columns>Medicamento__c</columns>
    <columns>Codigo_medicamento__c</columns>
    <columns>Nombre_medicamento__c</columns>
    <columns>Presentacion_Medicamento__c</columns>
    <columns>Valor__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>